[tool.poetry]
name = "slack-bolt-router"
version = "1.0.0"
description = "Slack Bolt Router utility"
authors = ["Dmytro Hoi <code@dmytrohoi.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
slack-bolt = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
